@@ -1,3 +1,8 @@
+2010-02-25 Borut Razem <borut.razem AT siol.net>
+
+	* sdcc-build/lib/bootstrap.mk:
+	  convert as2gbmap to a Windowd batch script if mingw crosscompiling
+
 2010-02-24 Borut Razem <borut.razem AT siol.net>
 
 	* sdcc-build/lib/bootstrap.mk: convert as2gbmap.py to an executable
